--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,9 @@
         <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/global.css">
 
+        <script type="text/javascript" src="//use.typekit.net/mje2syf.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
         <script>window.angular || document.write('<script src="vendors/angular/angular.min.js">\x3C/script>')</script>
 
@@ -26,36 +29,33 @@
     <body>
 
         <section ng-controller=PlantsCtrl>
-            <table ng-repeat="plant in plants" class="table table-bordered table-hover">
-                <thead>
-                    <tr>
-                        <th>{{ plant.name }}</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Water Every</td>
-                        <td>{{ plant.water }} Days</td>
-                    </tr>
-                    <tr>
-                        <td>Last Watered</td>
-                        <td>{{ plant.last_water | date:'MMMM d' }}</td>
-                    </tr>
-                    <tr>
-                        <td colspan=2>
-                            <button ng-click="waterPlant(plant)" class="btn btn-success">Water</button>
-                            <button ng-click="removePlant(plant)" class="btn btn-danger">Remove</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
 
-            <form ng-submit="addPlant()">
+            <article ng-repeat="plant in plants" class=plant>
+                <header class=plant--header>
+                    <div class="l-left">
+                        <h2 class=plant--name>{{ plant.name }}</h2>
+                        <p class=plant--water-every>Every {{ plant.water }} Days</p>
+                    </div>
+                    <div class="l-right">
+                        <button ng-click="removePlant(plant)" class="btn btn-danger plant--remove"><i class="icon-trash icon-white"></i></button>
+                    </div>
+                </header>
+                <figure class=plant--sched>
+                    <figcaption class=plant--sched--last>{{ plant.last_water | date:'MMM d' }}</figcaption>
+                    <b class=plant--sched--bar><b class=fill style="width: 100%;" ></b></b>
+                    <figcaption class=plant--sched--next>{{ next_water_day(plant) | date:'MMM d' }}</figcaption>
+                </figure>
+                <button ng-click="waterPlant(plant)" class="btn btn-success btn-block plant--water">Water</button>
+            </article>
+
+            <!-- [§] -->
+
+            <form class=add-plant ng-submit="addPlant()">
                 <fieldset>
                     <label>Name</label>
-                    <input ng-model=name type=text palceholder="Common name, fancy name or nickname">
+                    <input ng-model=name type=text palceholder="Common name, fancy name or nickname" required>
                     <label>Watering Schedule</label>
-                    <input ng-model=water type=text palceholder="How often it needs water">
+                    <input ng-model=water type=number palceholder="How often it needs water" required>
                 </fieldset>
                 <footer class="form-actions">
                     <input type=submit class="btn btn-success btn-large" value="Add A Plant">
