--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
                     <b class=plant--sched--bar><b class=fill style="width: 100%;" ></b></b>
                     <figcaption class=plant--sched--next>{{ next_water_day(plant) | date:'MMM d' }}</figcaption>
                 </figure>
-                <button ng-click="waterPlant(plant)" class="btn btn-success btn-block plant--water">Water</button>
+                <button ng-click="waterPlant(plant)" class="btn btn-success btn-block plant--water t-uppercase">Water</button>
             </article>
 
             <!-- [§] -->
