--- a/app/index.html
+++ b/app/index.html
@@ -41,8 +41,8 @@
                     </div>
                 </header>
                 <figure class=plant--sched>
-                    <figcaption class=plant--sched--last>{{ plant.last_water | date:'MMM d' }}</figcaption>
-                    <b class=plant--sched--bar><b class=fill style="width: 100%;" ></b></b>
+                    <figcaption class=plant--sched--last>{{ plant.last_water_day | date:'MMM d' }}</figcaption>
+                    <b class=plant--sched--bar><b class=fill style="width: {{ until_next_water_day(plant) }}%;" ></b></b>
                     <figcaption class=plant--sched--next>{{ next_water_day(plant) | date:'MMM d' }}</figcaption>
                 </figure>
                 <button ng-click="waterPlant(plant)" class="btn btn-success btn-block plant--water t-uppercase">Water</button>
